metrique/tests/ui/fail/enum_kitchen_sink.stderr
error: value(string) enum variants may not contain data. Use #[metrics(tag(name="MyField"))] to inject a value(string) field into an entry enum.
 --> tests/ui/fail/enum_kitchen_sink.rs:9:5
  |
9 |     Variant(usize),
  |     ^^^^^^^

error: value(string) enum variants may not contain data. Use #[metrics(tag(name="MyField"))] to inject a value(string) field into an entry enum.
  --> tests/ui/fail/enum_kitchen_sink.rs:15:5
   |
15 |     Variant { field: usize },
   |     ^^^^^^^

error: Unknown field: `unit`. Available values: `name`
  --> tests/ui/fail/enum_kitchen_sink.rs:21:15
   |
21 |     #[metrics(unit = metrique::writer::unit::Millisecond)]
   |               ^^^^

error: Unknown field: `timestamp`. Available values: `name`
  --> tests/ui/fail/enum_kitchen_sink.rs:28:15
   |
28 |     #[metrics(timestamp)]
   |               ^^^^^^^^^

error: Unknown field: `flatten`. Available values: `name`
  --> tests/ui/fail/enum_kitchen_sink.rs:35:15
   |
35 |     #[metrics(flatten)]
   |               ^^^^^^^

error: Unknown field: `sample_group`. Available values: `name`
  --> tests/ui/fail/enum_kitchen_sink.rs:42:15
   |
42 |     #[metrics(sample_group)]
   |               ^^^^^^^^^^^^

error: tuple variant fields must use #[metrics(flatten)], #[metrics(flatten_entry)], or #[metrics(ignore)]
  --> tests/ui/fail/enum_kitchen_sink.rs:49:13
   |
49 |     Variant(u32),
   |             ^^^

error: tuple variant fields must use #[metrics(flatten)], #[metrics(flatten_entry)], or #[metrics(ignore)]
  --> tests/ui/fail/enum_kitchen_sink.rs:56:13
   |
56 |     Variant(u32),
   |             ^^^

error: Unknown field: `unit`. Available values: `name`
  --> tests/ui/fail/enum_kitchen_sink.rs:55:15
   |
55 |     #[metrics(unit = metrique::writer::unit::Millisecond)]
   |               ^^^^

error: Unknown field: `timestamp`. Available values: `name`
  --> tests/ui/fail/enum_kitchen_sink.rs:62:15
   |
62 |     #[metrics(timestamp)]
   |               ^^^^^^^^^

error: tuple variant fields must use #[metrics(flatten)], #[metrics(flatten_entry)], or #[metrics(ignore)]
  --> tests/ui/fail/enum_kitchen_sink.rs:69:13
   |
69 |     Variant(#[metrics(unit = metrique::writer::unit::Millisecond)] u32),
   |             ^

error: tuple variant fields must use #[metrics(flatten)], #[metrics(flatten_entry)], or #[metrics(ignore)]
  --> tests/ui/fail/enum_kitchen_sink.rs:75:13
   |
75 |     Variant(#[metrics(timestamp)] metrique::Timestamp),
   |             ^

error: Cannot combine `flatten` with `unit`
  --> tests/ui/fail/enum_kitchen_sink.rs:81:32
   |
81 |     Variant(#[metrics(flatten, unit = metrique::writer::unit::Millisecond)] u32),
   |                                ^^^^

error[E0277]: CloseValue is not implemented for &TimestampOnClose
  --> tests/ui/fail/enum_kitchen_sink.rs:91:5
   |
91 |     timestamp: metrique::timers::TimestampOnClose,
   |     ^^^^^^^^^ This type must implement `CloseValue`
   |
   = help: the trait `CloseValue` is not implemented for `&TimestampOnClose`
   = note: You may need to add `#[metrics]` to `&TimestampOnClose` or implement `CloseValue` directly.
   = note: if &TimestampOnClose implements `Value` but not `CloseValue`, add `#[metrics(no_close)]`
   = note: If this type is `&T`, is closed inside a flattened entry, and `T` implements `CloseValue`, consider using `#[metrics(subfield_owned)]`.
   = help: the trait `CloseValue` is implemented for `TimestampOnClose`

error[E0277]: CloseValue is not implemented for &std::string::String
  --> tests/ui/fail/enum_kitchen_sink.rs:96:5
   |
96 |     value: String,
   |     ^^^^^ This type must implement `CloseValue`
   |
   = help: the trait `CloseValue` is not implemented for `&std::string::String`
   = note: You may need to add `#[metrics]` to `&std::string::String` or implement `CloseValue` directly.
   = note: if &std::string::String implements `Value` but not `CloseValue`, add `#[metrics(no_close)]`
   = note: If this type is `&T`, is closed inside a flattened entry, and `T` implements `CloseValue`, consider using `#[metrics(subfield_owned)]`.
help: consider dereferencing here
   |
96 |     *value: String,
   |     +

error[E0277]: CloseValue is not implemented for &TimestampOnClose
   --> tests/ui/fail/enum_kitchen_sink.rs:101:14
    |
101 |     Active { timestamp: metrique::timers::TimestampOnClose },
    |              ^^^^^^^^^ This type must implement `CloseValue`
    |
    = help: the trait `CloseValue` is not implemented for `&TimestampOnClose`
    = note: You may need to add `#[metrics]` to `&TimestampOnClose` or implement `CloseValue` directly.
    = note: if &TimestampOnClose implements `Value` but not `CloseValue`, add `#[metrics(no_close)]`
    = note: If this type is `&T`, is closed inside a flattened entry, and `T` implements `CloseValue`, consider using `#[metrics(subfield_owned)]`.
    = help: the trait `CloseValue` is implemented for `TimestampOnClose`
